--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,6 +34,10 @@
  Global Styles
  *************/
 
+html {
+	scroll-behavior: smooth;
+}
+
  *,
 ::after,
 ::before {
@@ -47,7 +51,7 @@ body {
   color: var(--dark-navy);
   line-height: 1.5;
   font-size: 0.875rem;
-  margin-top: 5rem;
+  margin-top: 0;
 }
 ul {
   list-style-type: none;
@@ -194,7 +198,7 @@ Navbar
 }
 
 .navbar {
-    position: absolute;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
@@ -243,6 +247,7 @@ Navbar
     .nav-links li {
       margin-right: 2rem;
     }
+
     .nav-links a {
       text-transform: capitalize;
       color: var(--dark-navy);
@@ -283,7 +288,8 @@ Navbar
   
 @media screen and (min-width: 992px) {
     .navbar {
-      background: transparent;
+      background: var(--light-green);
+      top: 0;
     }
 }
 
@@ -351,19 +357,19 @@ Sidebar
     animation: slideRight 0.5s ease-in-out 0.3s forwards;
   }
   .sidebar-links li:nth-of-type(1) {
-    animation-delay: 0.25s;
+    animation-delay: 0.1s;
   }
   .sidebar-links li:nth-of-type(2) {
-    animation-delay: 0.5s;
+    animation-delay: 0.2s;
   }
   .sidebar-links li:nth-of-type(3) {
-    animation-delay: 0.75s;
+    animation-delay: 0.3s;
   }
   .sidebar-links li:nth-of-type(4) {
-    animation-delay: 1s;
+    animation-delay: 0.4s;
   }
   .sidebar-links li:nth-of-type(5) {
-    animation-delay: 1.25s;
+    animation-delay: 0.5s;
   }
   @keyframes slideRight {
     0% {
@@ -380,19 +386,19 @@ Sidebar
     animation: slideUp 0.5s ease-in-out 0.3s forwards;
   }
   .sidebar-icons li:nth-of-type(1) {
-    animation-delay: 0.25s;
+    animation-delay: 0.1s;
   }
   .sidebar-icons li:nth-of-type(2) {
-    animation-delay: 0.5s;
+    animation-delay: 0.2s;
   }
   .sidebar-icons li:nth-of-type(3) {
-    animation-delay: 0.75s;
+    animation-delay: 0.3s;
   }
   .sidebar-icons li:nth-of-type(4) {
-    animation-delay: 1s;
+    animation-delay: 0.4s;
   }
   .sidebar-icons li:nth-of-type(5) {
-    animation-delay: 1.25s;
+    animation-delay: 0.5s;
   }
   @keyframes slideUp {
     0% {
@@ -522,15 +528,21 @@ Hero
 /***********
 About
 ***********/
+.about-section {
+  background-color: var(--light-green);
+}
 
 .about-page {
     padding: 7rem 0;
-  }
-  .about-img {
+    
+}
+  
+.about-img {
     margin-bottom: 2rem;
     height: 25rem;
-  }
-  .about-text .section-title {
+}
+  
+.about-text .section-title {
     margin-bottom: 2rem;
     text-align: left;
   }
@@ -574,3 +586,269 @@ About
       grid-column: 6 / -1;
     }
   }
+
+/**************
+Experience
+**************/
+
+.jobs-center {
+  width: 80vw;
+  margin: 0 auto;
+  max-width: var(--max-width);
+}
+.btn-container {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 2rem;
+  overflow-x: auto;
+}
+.job-btn {
+  background: transparent;
+  border-color: transparent;
+  text-transform: capitalize;
+  font-size: 1.25rem;
+  letter-spacing: var(--spacing);
+  margin: 0 0.5rem;
+  transition: var(--transition);
+  cursor: pointer;
+  padding: 0.25rem 0;
+  line-height: 1;
+}
+.job-btn:hover {
+  color: var(--clr-primary-5);
+  box-shadow: 0 2px var(--clr-primary-5);
+}
+.active-btn {
+  color: var(--clr-primary-5);
+  box-shadow: 0 2px var(--clr-primary-5);
+}
+.job-info {
+  min-height: 420px; 
+}
+.job-info h3 {
+  font-weight: 400;
+}
+.job-info h4 {
+  text-transform: uppercase;
+  color: var(--slate);
+  background: var(--lightest-slate);
+  display: inline-block;
+  padding: 0.375rem 0.75rem;
+  border-radius: var(--radius);
+}
+.job-date {
+  font-family: var(--font-mono);
+  letter-spacing: var(--spacing);
+}
+.job-desc {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 2rem;
+  align-items: center;
+  margin-bottom: 1.25rem;
+}
+.job-desc p {
+  margin-bottom: 0;
+  color: var(--dark-navy);
+}
+.job-icon {
+  color: var(--green);
+}
+
+@media(max-width: 480px) {
+  .btn-container {
+    width: calc(100% + 50px);
+    margin-left: -25px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .jobs-center {
+    width: 90vw;
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    column-gap: 4rem;
+  }
+  .btn-container {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .job-btn {
+    margin-bottom: 1rem;
+  }
+  .active-btn {
+    box-shadow: -2px 0 var(--green);
+  }
+  .job-btn:hover {
+    box-shadow: -2px 0 var(--green);
+  }
+}
+
+/************
+Projects
+************/
+
+.projects {
+  background: var(--light-green);
+}
+.project {
+  display: grid;
+  margin-bottom: 4rem;
+}
+.project-img {
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+  height: 20rem;
+  z-index: 1;
+}
+.project-img::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom right, var(--green), #222);
+  opacity: 0.85;
+  transition: var(--transition);
+}
+.project:hover .project-img::after {
+  opacity: 0;
+}
+.project-info {
+  background: var(--white);
+  padding: 1rem 2rem;
+  border-bottom-left-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+}
+.project-number {
+  display: inline-block;
+  font-size: 1.25rem;
+  color: var(--green);
+  margin-bottom: 0.75rem;
+}
+.project-info h3 {
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+  font-size: 1.5rem;
+}
+.project-desc {
+  color: var(--dark-navy);
+}
+.project-stack {
+  margin-bottom: 1rem;
+}
+.project-stack span,
+.about-stack span {
+  display: inline-block;
+  background: var(--lightest-slate);
+  color: var(--slate);
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: var(--radius);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 0.85rem;
+}
+.about-stack span {
+  margin-top: 0.5rem;
+}
+.project-icon {
+  color: var(--green);
+  font-size: 1.25rem;
+  margin-right: 0.5rem;
+  transition: var(--transition);
+}
+.project-icon:hover {
+  color: var(--lightest-slate);
+}
+@media screen and (min-width: 576px) {
+  .project-img {
+    height: 19rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .project-img {
+    height: 22rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .project {
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
+  }
+  .project-img {
+    grid-column: 2 / span 8;
+    grid-row: 1 / 1;
+    height: 34rem;
+    border-radius: var(--radius);
+    box-shadow: var(--dark-shadow);
+  }
+  .project-info {
+    border-radius: var(--radius);
+    box-shadow: var(--dark-shadow);
+
+    z-index: 1;
+    grid-column: 5 /12;
+    grid-row: 1 / 1;
+  }
+  .project:nth-of-type(even) .project-img {
+    grid-column: 8 / -1;
+    grid-row: 1 / 1;
+  }
+  .project:nth-of-type(even) .project-info {
+    grid-column: 2 / span 7;
+    grid-row: 1 / 1;
+    text-align: left;
+  }
+}
+
+
+/************
+Contact
+************/
+
+.contact {
+  padding: 7rem 0;
+}
+
+.contact-info h4 {
+  padding: 1rem 3rem;
+  color: var(--slate);
+  text-align: center;
+  letter-spacing: var(--spacing);
+  line-height: 2rem;
+  font-family: var(--font-sans);
+}
+
+@media screen and (min-width: 992px) {
+  .contact-info h4 {
+    padding: 1rem 9rem;
+  }
+}
+
+/************
+Error & Pages
+************/
+
+.error-page,
+.projects-page {
+  
+  background: var(--clr-grey-10);
+  min-height: calc(100vh - 5rem - 9rem);
+  
+}
+
+
+.error-page {
+  display: grid;
+  place-items: center;
+  background: var(--clr-primary-10);
+  text-align: center;
+}
+.error-page h1 {
+  text-transform: uppercase;
+  color: var(--clr-primary-1);
+  margin-bottom: 2rem;
+}
